<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pemsa Monitoreo App V1</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvide_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="no_te_preocupes_es">no te preocupes es</string>
    <string name="posible_recuperarla">posible recuperarla</string>
    <string name="tiene_una_cuenta">¿Tiene una cuenta?</string>
    <string name="enviar">Enviar</string>
    <string name="la_he_recuperado">La he recuperado</string>
    <string name="datos_generales">Datos generales</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="registrar">Registrar</string>
    <string name="acepto_los_terminos_y_condicones">Acepto los terminos y condicones</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">INICIO</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_consultas">CONSULTAS</string>
    <string name="menu_acuentas">AGREGAR CUENTAS</string>
    <string name="menu_ausuarios">GESTIONAR USUARIOS</string>
    <string name="menu_cambiarcontra">CAMBIAR CONTRASEÑA</string>
    <string name="menu_cerrarsesion">CERRAR SESIÓN</string>

    <string name="outsesion">CERRAR SESION</string>
    <string name="title_activity_apertura_cierre">AperturaCierre</string>
    <string name="title_activity_apertura_cierre2">APERTURA Y CIERRE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_evento_alarma">EventoAlarma</string>
    <string name="title_activity_evento_alarma2">EVENTO DE ALARMA</string>
    <string name="id_de_usuario">ID de Cuenta</string>
    <string name="codigo">Codigo</string>
    <string name="agregar">AGREGAR</string>
    <string name="agrgar_usuario">ADMINISTRAR USUARIOS</string>
    <string name="eliminar_usuario">ELIMINAR USUARIO</string>
    <string name="selecciona_sistema_de_alarma">selecciona sistema de alarma</string>
    <string name="seleccione_el_usuario_a_eliminar">seleccione el usuario a eliminar</string>
    <string name="eliminar">ELIMINAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desea_cerrar_sesi_n">¿DESEA CERRAR SESIÓN?</string>
    <string name="cambiar_fecha">CAMBIAR FECHA</string>
    <string name="title_activity_admin_usuarios_alarma">AdminUsuariosAlarma</string>
    <string name="agregar_usuario">AGREGAR USUARIO</string>
    <string name="nombre_pemsa">Nombre Pemsa</string>
    <string name="nombre_app">Nombre App</string>
    <string name="title_activity_c_o_n">CON</string>
    <string name="title_activity_a_c_t_c_o_n">ACTCON</string>
    <string name="title_activity_cuentas_abiertas">CuentasAbiertas</string>
    <string name="title_activity_apertura_cierre_grupo">AperturaCierreGrupo</string>
    <string name="ap">Ap</string>
    <string name="ci">Ci</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="p_gina_web">PÁGINA WEB</string>
    <string name="terminos_y_condiciones_y_aviso_de_privacidad">Términos y condiciones y aviso de privacidad</string>
    <string name="acerca_de">PEMSA monitoreo APP</string>
    <string name="acerca_de_la_aplicaci_n">Acerca de la aplicación</string>
    <string name="_174_protecci_n_electr_nica_monterrey_s_a_de_c_v">® Protección Electrónica Monterrey S.A. de C.V.</string>
    <string name="_169_2021_2032_protecci_n_electr_nica_monterrey_s_a_de_c_v" tools:ignore="TypographyDashes">© 2021-2032 Protección Electrónica Monterrey S.A. de C.V.</string>
    <string name="vesion_1_0">Vesion: 2.0</string>
    <string name="nombre_de_cuenta_o_cadena_comercial">Nombre de cuenta o Cadena comercial</string>
    <string name="todo">TODO</string>
    <string name="direcci_n_de_cuenta_opcional">Dirección del sistema de alarma (opcional)</string>
    <string name="he_le_do_y_acepto_los_t_rminos_y_condicones_y_aviso_de_privacidad">He leído y acepto los términos y condicones y aviso de privacidad</string>
    <string name="atras">ATRAS</string>
    <string name="siguiente">siguiente</string>
    <string name="ir_a_app">IR A APP</string>
    <string name="no_mostrar_bienvenida">No mostrar Bienvenida</string>
    <string name="selecione_el_inicio_y_fin_de_la_consulta_recuerde_que_solo_se_pueden_mostrar30_dias_naturales">Selecione el Inicio y fin de la consulta; Recuerde que solo se pueden mostrar30 dias naturales</string>
    <string name="cambiar_fecha_inicio">CAMBIAR FECHA INICIO</string>
    <string name="cambiar_fecha_final">CAMBIAR FECHA FINAL</string>
    <string name="consultar">CONSULTAR</string>
    <string name="selecione_el_inicio_y_fin_de_la_consulta">Selecione el Inicio y fin de la consulta</string>
    <string name="con_este_reporte_podr_consultar_los_horarios_en_los_que_se_recibieron_los_eventos_de_apertura_y_cierre">Con este reporte podrá consultar los horarios en los que se recibieron los eventos de apertura y cierre.</string>
    <string name="tambi_n_podr_ver_los_eventos_de_alarma_as_como_los_eventos_generados_por_su_sistema">También podrá ver los eventos de alarma, así como los eventos generados por su sistema.</string>
    <string name="podr_consultar_el_horario_de_la_primera_apertura_y_ultimo_cierre_del_d_a_de_la_ltima_semana">Podrá consultar el horario de la primera apertura y ultimo cierre del día de la última semana.</string>
    <string name="nombre_de_monitoreo">NOMBRE DE MONITOREO</string>
    <string name="ingresar_el_nombre_de_monitoreo_de_su_cuenta">Ingresar el nombre de monitoreo de su cuenta</string>
    <string name="se_ha_cambiado_su_contrase_a_exitosamente">SE HA CAMBIADO SU CONTRASEÑA EXITOSAMENTE</string>
    <string name="se_cerrar_la_sesi_n_npor_seguridad">Se cerrará la sesión \npor seguridad</string>
    <string name="se_ha_enviado_su_contrase_a_exitosamente">SE HA ENVIADO SU CONTRASEÑA EXITOSAMENTE</string>
    <string name="recuerde_que_por_motivos_de_seguridad_se_ha_enviado_la_contrase_a_al_correo_titular_due_o_del_sistema_de_alarma">recuerde que por motivos de seguridad se ha enviado la contraseña al correo titular (Dueño del sistema de alarma)</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="recuerde_que">RECUERDE QUE...</string>
    <string name="id_cuenta_agregar_condiciones_para_poder_agregar_una_cuenta">Id cuenta....agregar condiciones para poder agregar una cuenta</string>
    <string name="cuentas_abiertas">CUENTAS ABIERTAS</string>
    <string name="permite_consultar_las_sucursales_que_se_mantienen_abiertas_al_momento_de_realizar_la_petici_n">Permite consultar las sucursales que se mantienen abiertas al momento de realizar la petición.</string>
    <string name="registro_exitoso">REGISTRO EXITOSO</string>
    <string name="su_contrase_a_de_acceso_se_ha_enviado_al_titular_de_la_cuenta">Su contraseña de acceso se ha enviado al titular de la cuenta</string>
    <string name="disculpe_las_molestias">DISCULPE LAS MOLESTIAS</string>
    <string name="para_poder_agregar_una_cuenta_nusted_debe_tener_un_sistema_de_alarma_con_nosotros_as_como_la_solicitud_del_servicio_de_la_aplicaci_n">Para poder agregar una cuenta. \nUsted debe tener un sistema de alarma con nosotros, así como la solicitud del servicio de la Aplicación.</string>
    <string name="t_rminos_y_condiciones">TÉRMINOS Y CONDICIONES</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar Nueva Contraseña</string>
    <string name="siguienteww">SIGUIENTE</string>
    <string name="espere">ESPERE...</string>
    <string name="menu_consultasweb" />
    <string name="title_activity_reporte_avanzado">reporteAvanzado</string>
    <string name="title_activity_reporte_web">reporteWeb</string>
    <string name="reportes_graficos">REPORTES GRAFICOS</string>
    <string name="title_activity_actividad_ap_ci_i">Actividad_ApCiI</string>
    <string name="title_activity_problema_bateria">ProblemaBateria</string>
</resources>