<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_consultas"
            android:icon="@drawable/icon_consulta"
            android:title="@string/menu_consultas" />

        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@drawable/icono_cerrar_ses"
            android:title="@string/menu_cerrarsesion"
            android:visible="true" />

    </group>
    <item android:title="@string/acerca_de_la_aplicaci_n">
        <menu tools:showIn="navigation_view">

            <item
                android:id="@+id/nav_acercade"
                android:icon="@drawable/acerca_de"
                android:title="@string/acerca_de"
                android:visible="true" />
        </menu>
    </item>

</menu>