<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".olvide_contra">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarDefaultDelayBeforeFade="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="261dp"
                android:layout_height="233dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@mipmap/group12" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:accessibilityLiveRegion="none"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/olvidaste_tu_contrase_a"
                    android:textAlignment="center"
                    android:textColor="@color/azul"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_te_preocupes_es"
                    android:textAlignment="center"
                    android:textColor="@color/azul"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/posible_recuperarla"
                    android:textAlignment="center"
                    android:textColor="@color/azul"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo"
                    android:textColor="#B70F0A"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtOlvideCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:accessibilityLiveRegion="none"
                    android:autofillHints=""
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="20sp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_selector"
                android:text="@string/enviar"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/la_he_recuperado"
                    android:textColor="@color/gris"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtIC2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/azul"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/tiene_una_cuenta"
                    android:textColor="@color/gris"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtIC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/azul"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>