<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/acerca_de"
                android:textColor="@color/azul"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="284dp"
                android:layout_height="263dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/group12" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/iniciar_sesi_n"
                android:textColor="#000066"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correo"
                    android:textColor="#B70F0A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtRCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="ed.pe.r@hotmail.com" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrase_a"
                    android:textColor="@color/rojo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="123456" />

                <Button
                    android:id="@+id/btnIniciaSesion"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtOlvCon"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/olvide_mi_contrase_a"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/rojo"
                android:textColorHint="#FFFFFF"
                android:textCursorDrawable="@color/rojo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtR"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/registrarse"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/rojo"
                android:textColorHint="#FFFFFF"
                android:textCursorDrawable="@color/rojo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TermYCondYAviPriv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/terminos_y_condiciones_y_aviso_de_privacidad"
                android:textColor="@color/azul"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/VersionApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="@color/azul"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>